tests/syntax_errors/sasha14_2.tl
-- test case 14.
-- Description : for cycles. Single for cycles with an error.

-- Expected : '2'
require "ifj21" 
function main(iterations : number )  
    for i=0,i<iterations do          
        write("hello, 10 times")   
    end                              
end                                  
main(10)                             

